--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -40,6 +40,10 @@
   }
 
   &__corporate-text {
+    display: grid;
+    font-size: 1.6rem;
+    color: $color-secondary;
+    text-transform: uppercase;
   }
 
   &__corporate-logos {
