--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -12,6 +12,7 @@ $font-display: 'Lato', sans-serif;
 
 /* RESPONSIVE BREAKPOINTS */
 $bp-largest: 75em; // 1200px divided by 16 (default font-size for a browser)
+$bp-large: 62.5rem; // 1000px divided by 16 (default font-size for a browser)
 
 * {
   margin: 0;
@@ -60,7 +61,7 @@ body {
     [center-start]
     repeat(8, [col-start] minmax(min-content, 14rem) [col-end])
     [center-end] minmax(6rem, 1fr) [full-end];
+  // AFTER NOTES
+  /* why only name the columns and not the rows? */
+  // in overall layout focus is generally on the columns and not the rows - columns more important
 }
-
-/* why only name the columns and not the rows? */
-// in overall layout focus is generally on the columns and not the rows - columns more important
