--- a/css/style.css
+++ b/css/style.css
@@ -139,8 +139,18 @@ body {
   position: relative;
   text-align: center; }
   .menu-toggle__inner {
+    height: 4rem;
+    width: 4rem;
     margin: auto;
-    position: relative; }
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%); }
+  .menu-toggle span {
+    display: block;
+    height: 1px;
+    width: 100%;
+    background-color: #f9f7f6; }
 
 .story {
   /* Set the styles for images */ }
