--- a/sass/_sidebar.scss
+++ b/sass/_sidebar.scss
@@ -36,11 +36,30 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    display: grid;
+    align-items: center;
   }
   span {
     display: block;
-    height: 1px;
+    height: 3px;
     width: 100%;
     background-color: $color-grey-1;
+    &::before,
+    &::after {
+      background-color: #fff;
+      height: 3px;
+      content: '';
+      display: block;
+    }
+    &::before {
+      transform: translateY(-1.3rem);
+    }
+    &::after {
+      transform: translateY(1.1rem);
+    }
+  }
+
+  &__label {
+    display: block;
   }
 }
