--- a/sass/_sidebar.scss
+++ b/sass/_sidebar.scss
@@ -23,7 +23,15 @@
   background: transparent;
   border: none;
   cursor: pointer;
+
   display: flex;
+  flex-direction: column;
+  // this will align everything horizontally
+  /* WHY? - remember the flex-direction has now been set as column so align-items will now be horizontally */
+  align-items: center;
+  // this will align everything vertically
+  /* WHY? - remember the flex-direction has now been set as column so justify-content will now be horizontally */
+  justify-content: center;
   background-color: $color-primary;
   position: relative;
   text-align: center;
@@ -33,37 +41,38 @@
   }
 
   &__inner {
+    // define height and width of the grid with the span and before & after elements in it
     height: 4rem;
     width: 4rem;
-    margin: auto;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    // define the inner container (with span and before and after elements) as a grid to group
     display: grid;
+    // align them vertically centrally (rather than at top of blue button as before)
     align-items: center;
   }
   span {
-    display: block;
     height: 3px;
-    width: 100%;
     background-color: $color-grey-1;
     &::before,
     &::after {
-      background-color: #fff;
+      background-color: $color-grey-1;
       height: 3px;
+      //need to define a content
       content: '';
       display: block;
     }
     &::before {
+      //move before element up
       transform: translateY(-1.3rem);
     }
     &::after {
+      // move after elements down
       transform: translateY(1.1rem);
     }
   }
 
   &__label {
-    // display: block;
+    font-family: $font-display;
+    color: $color-grey-1;
+    text-transform: uppercase;
   }
 }
