--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -48,20 +48,30 @@ body {
   /* comments for the grid-template-rows */
   // 80% of the view-height, then min-content - smallest size of box without overflowing content.
   // 40% of view-width - whats visible in the viewport depending on how wide you make screen.
-  grid-template-rows: 80vh min-content 40vw min-content;
-  /* comments for the grid-template-columns */
-  // column layout specified below  1140/8 = 142px -> 140px -> 14rem because 14rem = 140px
-  // something between 1100 - 1200 px to divide up width of the screen
-  // function below - minmax - minimum it can be = min-content, max it can be per column = 14rem
-  // 8rem is for sidebar
-  // need to center the 8 minmax function columns - by put 1fr either side of the 8 min-max section
-  // mixmax 6rem, 1fr units will be first to shrink. without the 8rem sidebar - min of 60px (6rem) width
+  grid-template-rows: 10vh 80vh min-content 40vw min-content;
   grid-template-columns:
-    [sidebar-start] 13rem [sidebar-end full-start] minmax(6rem, 1fr)
-    [center-start]
-    repeat(8, [col-start] minmax(min-content, 14rem) [col-end])
+    [full-start] minmax(6rem, 1fr) [center-start] repeat(
+      8,
+      [col-start] minmax(min-content, 14rem) [col-end]
+    )
     [center-end] minmax(6rem, 1fr) [full-end];
-  // AFTER NOTES
-  /* why only name the columns and not the rows? */
-  // in overall layout focus is generally on the columns and not the rows - columns more important
+
+  @media only screen and (max-width: $bp-large) {
+    grid-template-rows: 80vh min-content 40vw min-content;
+    /* comments for the grid-template-columns */
+    // column layout specified below  1140/8 = 142px -> 140px -> 14rem because 14rem = 140px
+    // something between 1100 - 1200 px to divide up width of the screen
+    // function below - minmax - minimum it can be = min-content, max it can be per column = 14rem
+    // 8rem is for sidebar
+    // need to center the 8 minmax function columns - by put 1fr either side of the 8 min-max section
+    // mixmax 6rem, 1fr units will be first to shrink. without the 8rem sidebar - min of 60px (6rem) width
+    grid-template-columns:
+      [sidebar-start] 11rem [sidebar-end full-start] minmax(6rem, 1fr)
+      [center-start]
+      repeat(8, [col-start] minmax(min-content, 14rem) [col-end])
+      [center-end] minmax(6rem, 1fr) [full-end];
+    // AFTER NOTES
+    /* why only name the columns and not the rows? */
+    // in overall layout focus is generally on the columns and not the rows - columns more important
+  }
 }
