--- a/sass/_sidebar.scss
+++ b/sass/_sidebar.scss
@@ -8,8 +8,8 @@
   grid-row: 1 / -1;
 
   display: grid;
-  grid-template-columns: 1fr 10rem 1fr;
-  grid-template-rows: 2rem 10rem 2rem 10rem;
+  grid-template-columns: 1fr 8rem 1fr;
+  grid-template-rows: 2rem 8rem 2rem 8rem;
   &__badge {
     width: 100%;
     grid-column: 2 / 3;
@@ -74,5 +74,7 @@
     font-family: $font-display;
     color: $color-grey-1;
     text-transform: uppercase;
+    font-size: 1.2rem;
+    margin-top: 0.2rem;
   }
 }
