--- a/sass/_players.scss
+++ b/sass/_players.scss
@@ -1,4 +1,13 @@
 .players {
   background-color: $color-secondary;
   grid-column: col-start 7 / full-end;
+
+  &__list {
+  }
+
+  &__img {
+  }
+
+  &__goals {
+  }
 }
