--- a/css/style.css
+++ b/css/style.css
@@ -114,6 +114,13 @@ body {
 .players {
   background-color: #101d2c;
   grid-column: col-start 7 / full-end; }
+  .players__list {
+    display: grid; }
+  .players__img {
+    /* width: 160px */
+    width: 16rem;
+    border-radius: 50%;
+    display: block; }
 
 .sidebar {
   background-color: #f9f7f6;
@@ -230,6 +237,8 @@ body {
 
 .heading-4 {
   font-size: 1.9rem; }
+  .heading-4--light {
+    color: #aaa; }
 
 .btn {
   background-color: #0c22e8;
